--- a/site/public/css/style-quiz.css
+++ b/site/public/css/style-quiz.css
@@ -93,7 +93,7 @@ section {
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: 100vh;
+    min-height: 110vh;
     background-image: url(../img/Quiz/background-quiz2.svg);
     background-repeat: no-repeat;
     background-size: cover;
@@ -136,7 +136,7 @@ section {
     border: none;
     border-radius: 5px;
     cursor: pointer;
-    background-color: #f7d066;
+    background-color: #ebc253;
     color: white;
     font-size: 25px;
     margin-top: 4%;
