--- a/site/public/css/style-quiz2.css
+++ b/site/public/css/style-quiz2.css
@@ -94,7 +94,7 @@ section {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    min-height: 100vh;
+    min-height: 110vh;
     background-image: url(../img/Quiz/background-quiz2.svg);
     background-repeat: no-repeat;
     background-size: cover;
@@ -156,7 +156,7 @@ button {
     border: none;
     border-radius: 5px;
     cursor: pointer;
-    background-color: #f7d066;
+    background-color: #ebc253;
     color: white;
 }
 
